Registration flows completed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=GrowTowerMonitoringService
-server.port=8000
+server.port=8080
 spring.datasource.hikari.connection-timeout=5000
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -27,11 +27,13 @@ openapi=3.0.0
 #Inbuilt Caching Configuration
 caching.spring.metadata.ttl=43200000
 logging.level.root=INFO
-logging.level.org.springframework.web=INFO
-logging.level.com.epic.ais=ERROR
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework=ERROR
+logging.level.com.epic.ais=DEBUG
 logging.file.path=logs
-logging.file.name=${logging.file.path}/PoolControlService.log
+logging.file.name=${logging.file.path}/GrowTowerMonitoringService.log
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} %magenta([%thread]) %highlight(%-5level) %yellow(%logger{36}) - %msg%n
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %magenta([%thread]) %highlight(%-5level) %yellow(%logger{36}) - %msg%n
 app.firebase-configuration-file=serviceAccountKey.json
 application-version=@project.version@
+
