--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,18 +12,11 @@ management.endpoints.web.exposure.include=*
 swagger=2.0
 openapi=3.0.0
 #MQTT Configuration
-#mqtt.automaticReconnect=true
-#mqtt.cleanSession=true
-#mqtt.connectionTimeout=10
-#mqtt.broker.url=ssl://aisneo.eastus-1.ts.eventgrid.azure.net:8883
-#mqtt.username=EPICServer
-#mqtt.client.id=epic-api
-#mqtt.topic.metrics=Neo1/status
-#mqtt.topic.alert=Neo1/alert
-#mqtt.switch.mode.topic=Neo1/chlorinator_id/command/switch_mode
-#mqtt.change.timer.topic=Neo1/chlorinator_id/command/change_timer
-#mqtt.auxiliary.timer.topic=Neo1/chlorinator_id/command/auxiliary_timer
-#mqtt.firmware.update.topic=Neo1/chlorinator_id/command/update
+mqtt.automaticReconnect=true
+mqtt.cleanSession=true
+mqtt.connectionTimeout=10
+mqtt.broker.url=tcp://broker.mqtt.cool:1883
+mqtt.topic.mtrics=grow_tower_data
 #Inbuilt Caching Configuration
 caching.spring.metadata.ttl=43200000
 logging.level.root=INFO
