--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,17 @@
             <artifactId>tomcat-embed-core</artifactId>
             <version>10.1.24</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.paho</groupId>
+            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.integration/spring-integration-mqtt -->
+        <dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-mqtt</artifactId>
+            <version>6.0.5</version>
+        </dependency>
     </dependencies>
 
     <build>
