--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
             <artifactId>spring-integration-mqtt</artifactId>
             <version>6.0.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>9.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
